// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error > renders with as correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with class correctly 1`] = `
"<main class="min-h-full" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with clear correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with default slot correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with error correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with links slot correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links">Links slot</div>
</main>"
`;

exports[`error > renders with message slot correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">Message slot</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with redirect correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with statusCode slot correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">Status code slot</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with statusMessage slot correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Status message slot</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`error > renders with ui correctly 1`] = `
"<main class="" data-pohon="error-root">
  <p class="" data-pohon="error-status-code">404</p>
  <h1 class="" data-pohon="error-status-message">Not Found</h1>
  <p class="" data-pohon="error-message">The page you are looking for does not exist.</p>
  <div class="mt-16" data-pohon="error-links"><button type="button" class="" data-pohon="button-base">
      <!--v-if--><span class="" data-pohon="button-label">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;
